# netbox-route53-sync

./: README.md  pyproject.toml
netbox_route53_sync/: __init__.py  choices.py  filtersets.py  navigation.py  reader.py  syncer.py  urls.py
netbox_route53_sync/api/: serializers.py  urls.py  views.py
netbox_route53_sync/forms/: __init__.py  forms.py
netbox_route53_sync/management/commands/: sync_route53.py
netbox_route53_sync/migrations/: 0001_initial.py  0002_service_links.py
netbox_route53_sync/models/: __init__.py  aws_account.py  hosted_zone.py  registered_domain.py  service_link.py  sync_log.py  zone_record.py
netbox_route53_sync/tables/: __init__.py  tables.py
netbox_route53_sync/templates/netbox_route53_sync/: awsaccount.html  hostedzone.html  registereddomain.html  servicelink.html  synclog.html  zonerecord.html
netbox_route53_sync/views/: __init__.py  views.py
