[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-route53-sync"
version = "0.1.0"
description = "NetBox plugin to import AWS Route53 hosted zones and records from exported JSON files"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-django"]

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_route53_sync*"]
